--- a/Mobile50_immutable+redux/package.json
+++ b/Mobile50_immutable+redux/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "votesblock",
+  "name": "mobile",
   "version": "1.0.0",
-  "description": "блок голосования",
+  "description": "мобильная компания",
   "main": "App.js",
   "scripts": {
     "build": ".\\node_modules\\.bin\\webpack",
@@ -21,7 +21,6 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "events": "^1.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
