--- a/Mobile60_hash/package.json
+++ b/Mobile60_hash/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.4.1",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   }
 }
